--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.2';i.angular='5.2.11';i.staticDir='build/';})(window);
   </script>
     <meta charset="UTF-8">
-    <base href="/portamerica/">
+    <!--base href="/portamerica/"-->
     <title>PortAmérica</title>
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
@@ -43,7 +43,7 @@
     <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="assets/splash/SplashScreen2048x2732.jpg">
     <script src="assets/scripts/pjxml.js"></script>
     <script>
-        var hasNewUpdate = false;
+        /*var hasNewUpdate = false;
                         if ('serviceWorker' in navigator) {
                             var currentWorker = null;
                             navigator.serviceWorker.register('service-worker.js')
@@ -79,7 +79,7 @@
                                 refreshing = true;
                                 window.location.reload();
                             });
-                        }
+                        }*/
     </script>
 
 
