--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.2';i.angular='5.2.11';i.staticDir='build/';})(window);
   </script>
     <meta charset="UTF-8">
-    <base href="/portamerica/">
+    <!--base href="/portamerica/"-->
     <title>PortAmérica</title>
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <link rel="icon" type="image/x-icon" href="assets/icon/pa-favicon.png">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#222">
 
-    <!-- add to homescreen for ios -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="msapplication-TileImage" content="assets/icon/icono152x152.jpg">
+    <meta name="msapplication-TileColor" content="#222">
+
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-title" content="PortAmérica">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="assets/icon/icono152x152.jpg">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icon/icono152x152.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/icono180x180.jpg">
@@ -42,49 +42,62 @@
     <!-- iPad Pro 12.9" (2048px x 2732px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="assets/splash/SplashScreen2048x2732.jpg">
     <script src="assets/scripts/pjxml.js"></script>
+    <script src="assets/scripts/NoSleep.min.js"></script>
+    <script src="assets/scripts/granim.min.js"></script>
+    <script src="assets/scripts/stencil/wp-components.js"></script>
     <script>
-        var hasNewUpdate = false;
-                        if ('serviceWorker' in navigator) {
-                            var currentWorker = null;
-                            navigator.serviceWorker.register('service-worker.js')
-                                .then(registration => {
-                                    console.log("Service Worker Registered");
-                                    currentWorker = registration;
-                                    // We don't want to check for updates on first load or we will get a false
-                                    // positive. registration.active will be falsy on first load.
-                                    if (registration.active) {
-                                        // Check if an updated sw.js was found
-                                        registration.addEventListener('updatefound', () => {
-                                            console.log('Update found. Waiting for install to complete.');
-                                            const installingWorker = registration.installing;
-                                            // Watch for changes to the worker's state. Once it is "installed", our cache
-                                            // has been updated with our new files, so we can prompt the user to instantly
-                                            // reload.
-                                            installingWorker.addEventListener('statechange', () => {
-                                                window.appUpdateEvent = new CustomEvent('appUpdate', {
-                                                    detail: installingWorker
-                                                });
-                                                if (installingWorker.state === 'installed') {
-                                                    console.log('Install complete. Triggering update prompt.');
-                                                    hasNewUpdate = true;
-                                                    window.dispatchEvent(window.appUpdateEvent);
-                                                }
-                                            });
-                                        });
-                                    }
-                                })
-                                .catch(e => console.log(e));
-                            navigator.serviceWorker.addEventListener('controllerchange', function(e) {
-                                if (!hasNewUpdate) return;
-                                refreshing = true;
-                                window.location.reload();
+        /**/var hasNewUpdate = false;
+        if ('serviceWorker' in navigator) {
+            var currentWorker = null;
+            navigator.serviceWorker.register('service-worker.js')
+                .then(registration => {
+                    console.log("Service Worker Registered");
+                    currentWorker = registration;
+                    // We don't want to check for updates on first load or we will get a false
+                    // positive. registration.active will be falsy on first load.
+                    if (registration.active) {
+                        // Check if an updated sw.js was found
+                        registration.addEventListener('updatefound', () => {
+                            console.log('Update found. Waiting for install to complete.');
+                            const installingWorker = registration.installing;
+                            // Watch for changes to the worker's state. Once it is "installed", our cache
+                            // has been updated with our new files, so we can prompt the user to instantly
+                            // reload.
+                            installingWorker.addEventListener('statechange', () => {
+                                window.appUpdateEvent = new CustomEvent('appUpdate', {
+                                    detail: installingWorker
+                                });
+                                if (installingWorker.state === 'installed') {
+                                    console.log('Install complete. Triggering update prompt.');
+                                    hasNewUpdate = true;
+                                    window.dispatchEvent(window.appUpdateEvent);
+                                }
                             });
-                        }
+                        });
+                    }
+                })
+                .catch(e => console.log(e));
+            navigator.serviceWorker.addEventListener('controllerchange', function(e) {
+                if (!hasNewUpdate) return;
+                refreshing = true;
+                window.location.reload();
+            });
+        }
+        
+        window.addEventListener('beforeinstallprompt', function (e) {
+            e.preventDefault();
+            window.appInstallEvent = new CustomEvent('appInstall', {
+                detail: e
+            });
+            window.dispatchEvent(window.appInstallEvent);
+        });             
+        /**/
     </script>
 
 
     <link href="build/main.css" rel="stylesheet">
     <link href="assets/css/animate.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-grid.min.css" rel="stylesheet">
 </head>
 
 <body>
