--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
 
     <link href="build/main.css" rel="stylesheet">
-    <link async href="assets/css/animate.min.css" rel="stylesheet">
-    <link async href="assets/css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="assets/css/animate.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-grid.min.css" rel="stylesheet">
 </head>
 
 <body>
