--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icon/icono152x152.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/icono180x180.jpg">
     <link rel="apple-touch-icon" sizes="167x167" href="assets/icon/icono167x167.jpg">
-    <!-- iPhone X (1125px x 2436px) -->
+    <!-- iPhone X, Xs (1125px x 2436px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="assets/splash/SplashScreen1125x2436.jpg">
     <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="assets/splash/SplashScreen750x1334.jpg">
