--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-title" content="PortAmérica">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="assets/icon/icono152x152.jpg">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icon/icono152x152.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/icono180x180.jpg">
